--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "scripts": {
         "build": "webpack",
         "dev": "NODE_ENV=development webpack --watch --progress",
+        "prod": "NODE_ENV=production webpack --watch --progress",
         "shopify": "cd dist && shopify theme dev --store chapman001 --port=3002"
     },
     "babel": {
@@ -37,6 +38,7 @@
         "@shopify/eslint-plugin": "^44.0.0",
         "@shopify/postcss-plugin": "^5.0.2",
         "@shopify/prettier-config": "^1.1.2",
+        "@tailwindcss/typography": "^0.5.10",
         "babel-core": "6.26.3",
         "babel-loader": "^9.1.3",
         "copy-webpack-plugin": "^11.0.0",
@@ -48,7 +50,11 @@
         "mini-css-extract-plugin": "^2.7.6",
         "postcss": "^8.4.32",
         "postcss-loader": "^7.3.3",
+        "postcss-mixins": "^9.0.4",
+        "postcss-nested-ancestors": "^3.0.0",
         "postcss-preset-env": "^9.3.0",
+        "postcss-rem": "^3.0.0",
+        "postcss-simple-vars": "^7.0.1",
         "prettier": "^3.1.1",
         "style-loader": "^3.3.3",
         "tailwindcss": "^3.3.6",
