--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
         "@shopify/eslint-plugin": "^44.0.0",
         "@shopify/postcss-plugin": "^5.0.2",
         "@shopify/prettier-config": "^1.1.2",
-        "@tailwindcss/typography": "^0.5.10",
         "babel-core": "6.26.3",
         "babel-loader": "^9.1.3",
         "copy-webpack-plugin": "^11.0.0",
@@ -50,16 +49,17 @@
         "mini-css-extract-plugin": "^2.7.6",
         "postcss": "^8.4.32",
         "postcss-loader": "^7.3.3",
-        "postcss-mixins": "^9.0.4",
-        "postcss-nested-ancestors": "^3.0.0",
         "postcss-preset-env": "^9.3.0",
-        "postcss-rem": "^3.0.0",
-        "postcss-simple-vars": "^7.0.1",
         "prettier": "^3.1.1",
+        "sass": "^1.69.5",
+        "sass-loader": "^13.3.2",
         "style-loader": "^3.3.3",
-        "tailwindcss": "^3.3.6",
         "terser-webpack-plugin": "^5.3.9",
         "webpack": "^5.89.0",
         "webpack-cli": "^5.1.4"
+    },
+    "dependencies": {
+        "@popperjs/core": "^2.11.8",
+        "bootstrap": "^5.3.2"
     }
 }
